--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -90,13 +90,7 @@
                 <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
             </div>
 
-            <!-- 체크박스 및 로그인 상태 유지 -->
-            <div class="checkbox-container">
-                <div>
-                    <input type="checkbox" id="keep-login">
-                    <label for="keep-login">로그인 상태 유지</label>
-                </div>
-            </div>
+
 
             <!-- 로그인 버튼 -->
             <div class="login-btn-container">
@@ -106,7 +100,7 @@
 
         <!-- 회원가입 | 비밀번호 찾기 링크 -->
         <div class="form-footer">
-            <a href="#">비밀번호 찾기</a> | <a th:href="@{/signup}">회원가입</a>
+            <a href="#">비밀번호 찾기</a> | <a href="signup.html">회원가입</a>
         </div>
     </div>
 </div>
