[feat] mbti 별 책 추천 및 검색 기능 구현

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -84,10 +84,10 @@
         <!-- 로그인 폼 -->
         <form th:action="@{/loginProc}" method="post">
             <div class="mb-3">
-                <input type="email" class="form-control" id="email" name="email" placeholder="이메일">
+                <input type="email" class="form-control" id="email" name="email" placeholder="이메일" value="qwe@com">
             </div>
             <div class="mb-3">
-                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호">
+                <input type="password" class="form-control" id="password" name="password" placeholder="비밀번호" value="qwe">
             </div>
 
 
