--- a/src/main/resources/templates/childSelectPage.html
+++ b/src/main/resources/templates/childSelectPage.html
@@ -190,6 +190,16 @@
     </div>
 </div>
 
+<!-- 사용자 이메일을 서버에서 받아와 세션 스토리지에 저장 -->
+<th:block th:if="${user != null}">
+    <script>
+        // 이메일은 문자열로 처리
+        const userEmail = /*[[${'#'}]]*/'[[${user.email}]]';
+        sessionStorage.setItem('userEmail', userEmail);
+        console.log('Stored userEmail:', userEmail);
+    </script>
+</th:block>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
