--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -222,7 +222,7 @@
 
 <!-- Sidebar -->
 <div id="sidebar">
-    <a href="#">아이 프로필 변경</a>
+    <a href="/children/select">아이 프로필 변경</a>
     <a href="/children/">아이정보 보기</a>
     <a href="/userpage">계정보기</a>
     <a href="#">최근 책 보기</a>
@@ -284,6 +284,28 @@
         </div>
     </div>
 </div>
+
+
+
+
+<!-- 서버에서 선택한 자녀 ID를 세션에서 가져와 세션 스토리지에 저장 -->
+<th:block th:if="${child != null}">
+    <script>
+        // 자녀 ID는 숫자로 처리
+        const selectedChildId = [[${child.childId}]];
+        sessionStorage.setItem('selectedChildId', selectedChildId);
+        console.log('Stored selectedChildId:', selectedChildId);
+    </script>
+</th:block>
+
+<!-- 콘솔에 세션에서 가져온 자녀 정보 출력 -->
+<script>
+    console.log('Selected user Email:', sessionStorage.getItem('userEmail'));
+    console.log('Selected Child ID:', sessionStorage.getItem('selectedChildId'));
+</script>
+
+
+
 
 <!-- JavaScript for sidebar toggle -->
 <script>
@@ -462,8 +484,8 @@
             mainContent.style.marginLeft = '250px';
         }
     });
-</script>
 
+</script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
