[Feat] 자녀 프로필 추가 기능 및 선택 UI 변경

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -223,7 +223,7 @@
 <!-- Sidebar -->
 <div id="sidebar">
     <a href="/children/select">아이 프로필 변경</a>
-    <a href="/children/">아이정보 보기</a>
+    <a href="/children/page">아이 정보 수정</a>
     <a href="/userpage">계정보기</a>
     <a href="#">최근 책 보기</a>
     <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
