--- a/src/main/resources/templates/userPage.html
+++ b/src/main/resources/templates/userPage.html
@@ -127,6 +127,7 @@
 <body>
 
 
+
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar">
     <div class="container-fluid">
@@ -160,15 +161,14 @@
 
 <!-- Sidebar -->
 <div id="sidebar">
-    <a href="#">아이 프로필 변경</a>
-    <a href="/children/">아이정보 보기</a>
+    <a href="/children/select">아이 프로필 변경</a>
+    <a href="/children/page">아이 정보 수정</a>
     <a href="/userpage">계정보기</a>
     <a href="#">최근 책 보기</a>
     <a href="/ChildFavorBookList.html">좋아요 누른 책 보기</a>
     <a href="#">카테고리 별 책보기</a>
     <a href="/lottery/form">선착순 이벤트</a>
 </div>
-
 
 <div class="container">
     <h2 class="text-center mb-4">회원정보 수정</h2>
